--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,6 @@
 <div class = "text-box">
 <h1 id = "welcome-msg">Site Under Construction</h1>
 <p id = "construction-msg">We are working on getting you recommendations soon. In the meanwhile, just go fucking watch:</p>
-<a href="http://www.imdb.com/title/tt0120812/?ref_=nv_sr_2" id = "movie-recommendation">Rush Hour</a>
+<a href="http://www.imdb.com/title/tt0468569/?ref_=nv_sr_2" id = "movie-recommendation">The Dark Knight</a>
 </div>
 </body>
