--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,8 @@
 </head>
 
 <body>
-
+<script type="text/javascript" src="angular.min.js"></script>
+var app = angular.module{'movie',[]);
 <div class = "text-box">
 <h1 id = "welcome-msg">Site Under Construction</h1>
 <p id = "construction-msg">We are working on getting you recommendations soon. In the meanwhile, just go fucking watch:</p>
