--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,8 @@
 <link href="css/construction.css" rel="stylesheet">
 <link href='http://fonts.googleapis.com/css?family=Slabo+27px' rel='stylesheet' type='text/css'>
 <link href='http://fonts.googleapis.com/css?family=Raleway:600,300' rel='stylesheet' type='text/css'>
+<script src="bower_components/angular-resource/angular-resource.js"></script>
+<script src="js/services.js"></script>
 </head>
 
 <body>
