--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,13 @@
 <head>
 <title> What the Fuck To Watch </title>
 <link href="css/construction.css" rel="stylesheet">
-<link href='http://fonts.googleapis.com/css?family=Slabo+27px' rel='stylesheet' type='text/css'>
-<link href='http://fonts.googleapis.com/css?family=Raleway:600,300' rel='stylesheet' type='text/css'>
+<link href="bower_components/bootstrap/dist/css/bootstrap.css" rel='stylesheet'>
+<script src="bower_components/angular/angular.js"></script>
+<script src="bower_components/angular-route/angular-route.js"></script>
 <script src="bower_components/angular-resource/angular-resource.js"></script>
+<script src="js/app.js"></script>
+<script src="js/controllers.js"></script>
+<script src="js/filters.js"></script>
 <script src="js/services.js"></script>
 </head>
 
