--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,5 @@
 <!doctype html>
+<html lang="en" ng-app>
 <head>
 <title> What the Fuck To Watch </title>
 <link href="css/construction.css" rel="stylesheet">
@@ -18,6 +19,7 @@ var app = angular.module{'movie',[]);
 <div class = "text-box">
 <h1 id = "welcome-msg">Site Under Construction</h1>
 <p id = "construction-msg">We are working on getting you recommendations soon. In the meanwhile, just go fucking watch:</p>
+<img src="http://ia.media-imdb.com/images/M/MV5BMTMxNTMwODM0NF5BMl5BanBnXkFtZTcwODAyMTk2Mw@@._V1_SX640_SY720_.jpg" stle="width:304px;height:228px">
 <a href="http://www.imdb.com/title/tt0468569/?ref_=nv_sr_2" id = "movie-recommendation">The Dark Knight</a>
 </div>
 </body>
