--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" ng-app>
+<html lang="en" ng-app="moviecatApp">
 <head>
 <title> What the Fuck To Watch </title>
 <link href="css/construction.css" rel="stylesheet">
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+<body ng-controller="MovieListCtrl">
 <script type="text/javascript" src="angular.min.js"></script>
 var app = angular.module{'movie',[]);
 <div class = "text-box">
